--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,7 @@ body.offcanvas {
 
 .author-img {
   background-size: cover;
-  background-position: center center;
+  /*background-position: center center;*/
   background-repeat: no-repeat;
   position: relative; }
 
